# QAG20251016

./: .gitignore  OPTIMIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  optimized_qag_openai.py  pyproject.toml  run_with_openai.sh
configs/: openai.yaml
data/musique/: dev-data-sample.jsonl  dev-data.jsonl  train-data-sample.jsonl
model_hosting/: run_vllm.sh  run_vllm_2gpu.sh  run_vllm_2gpu_simple.sh  run_vllm_2gpu_working.sh  run_vllm_simple.sh  run_vllm_single_gpu.sh
src/: agent_utils.py  answer_team.py  main.py  memory.py  question_team.py  utils.py
src/configs/: default.yaml
